# mesa21.2-virgl

./: android-cross  apt-mirrors.txt  meson.build  meson.options
.github/workflows/: build.yml  getapt-mirrorstxt.yml  getsourcelist.yml
.gitlab-ci/: create-llvm-meson-wrap-file.sh
include/: meson.build
mesa_deps/spirv-tools/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc
src/android_stub/: meson.build
src/drm-shim/: drm_shim.c
src/egl/drivers/dri2/: platform_android.c
src/gallium/: meson.build
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h
src/gallium/frontends/osmesa/: meson.build  osmesa.c
src/gallium/targets/dri/: meson.build
src/gallium/targets/osmesa/: meson.build
src/gallium/winsys/sw/dri/: dri_sw_winsys.c
src/gallium/winsys/virgl/vtest/: virgl_vtest_socket.c
src/mesa/state_tracker/: st_manager.c
src/util/: libsync.h
src/util/u_gralloc/: u_gralloc_libdrm.c
subprojects/llvm/: meson.build
